chore: 搬移部分依赖包到 模板

--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "react-simple-webpack-hua": "^1.0.0"
+    "react-simple-webpack-hua": "^1.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.6",
+    "typescript": "^3.7.3",
+    "@loadable/component": "^5.14.1"
   },
   "dependencies": {}
 }
