--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@
 /dist
 /yarn.lock
 /*.log
+.DS_Store
+Thumbs.db
+node_modules/
+dist/
+/.vscode/settings.json
+/.vscode/tasks.json
+yarn-error.log
+/*.tgz
+package-lock.json
+.npmrc
+.yarnrc
+tsconfig.tsbuildinfo
+.cache/
+webpack-config.js
+postcss.config.js
+parcelPostHTML.js
