--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,12 @@
 /dist
 /yarn.lock
 /*.log
-.DS_Store
-Thumbs.db
-node_modules/
-dist/
-/.vscode/settings.json
-/.vscode/tasks.json
+/.vscode
 yarn-error.log
 /*.tgz
-package-lock.json
 .npmrc
 .yarnrc
-tsconfig.tsbuildinfo
 .cache/
+.history/
 webpack-config.js
 postcss.config.js
-parcelPostHTML.js
