--- a/.babelrc
+++ b/.babelrc
@@ -15,7 +15,7 @@
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     "@babel/plugin-transform-react-jsx",
-    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    ["@babel/plugin-proposal-class-properties"],
     [
       "@babel/plugin-transform-runtime",
       {
