--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
   "name": "react-webpack-template",
   "version": "1.0.0",
-  "description": "react一个严格模板",
+  "description": "react一个宽松版模板",
   "main": "",
   "scripts": {
-    "start": "zhihuiWebpack start",
-    "build": "zhihuiWebpack build",
-    "buildtsc": "yarn tsc",
-    "clean": "rm -rf dist && rm -f tsconfig.*.tsbuildinfo",
+    "start": "xiangWebpack start",
+    "build": "xiangWebpack build",
+    "clean": "rm -rf dist/",
     "build:dry": "yarn tsc -p tsconfig.ci.json",
     "build:clean": "yarn clean && yarn build",
-    "build:watch": "yarn tsc -w"
+    "build:watch": "yarn tsc -w",
+    "lint": "sh script/sh/lint",
+    "release": "npm run clean && npm run build && node parcelPostHTML.js",
+    "zip:beta": "node zip.js beta",
+    "zip:prod": "node zip.js prod"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@luban/devenv": "^1.3.0",
-    "@luban/linter": "1.10",
+    "@loadable/component": "^5.14.1",
+    "xiang-webpack": "^1.1.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
-    "husky": "^4.3.7",
-    "lint-staged": "^10.5.3",
-    "zhihui-webpack": "^1.1.2"
+    "archiver": "^5.0.0",
+    "husky": "^8.0.3",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "lint-staged": "^13.1.2"
   },
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
@@ -33,6 +36,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "typescript": "3.9"
+    "typescript": "^3.9"
   }
 }
