--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,8 +36,8 @@
   },
   "baseUrl": ".",
   "paths": {
-    "~*": ["src/*"],
-    "@*": ["src/*"]
+    "~/*": ["src/*"],
+    "@/*": ["src/*"]
   },
   "include": [
     "./src/**/*.tsx",
