--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@loadable/component": "^5.14.1",
-    "xiang-webpack": "^1.1.4",
+    "xiang-webpack": "1.1.0-webpack5.4",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
